# interlinked

./: .env  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: build.yaml  lint.yaml  test.yaml  workflow.yaml
.zed/: settings.json
cli/: .env  Cargo.toml  local_config.toml
cli/src/: main.rs
frontend/: Cargo.toml  app.js  bun.nix  index.html  index.ts  package.json  serve.js  vite.config.ts
frontend/src/: lib.rs  main.rs
frontend/src/components/: app.rs  input_component.rs  link_input.rs  mod.rs  note_input.rs  payload_computation.rs
nix/: hm.nix  service.nix  treefmt.nix
server/: .env  Cargo.toml
server/migrations/2025-07-17-085612_create_records/: up.sql
server/migrations/2026-01-24-235442-add_record_type/: down.sql  up.sql
server/src/: config.rs  main.rs  models.rs  schema.rs
server/src/routes/: assets.rs  common.rs  index.rs  mod.rs
server/src/routes/api/: difficulty.rs  mod.rs  new_link.rs  redirect.rs
server/src/routes/links/: mod.rs  new_link.rs  redirect.rs
server/src/routes/notes/: mod.rs  new_note.rs  note.rs
server/templates/: index.html
shared/: Cargo.toml
shared/src/: lib.rs  new_object_schemes.rs  proof_of_work.rs  requests.rs  routes.rs
tests/: .gitignore  Cargo.toml  build.rs
tests/src/: lib.rs
tests/tests/: tests.rs  testutil.rs
