[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "itlkd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.41", features = ["derive"] }
indicatif = "0.18.3"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
shared = { version = "0.1.0", path = "../shared" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.9.11"
url = { workspace = true }
