[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
chrono = "0.4.45"
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_workers = "0.3.0"
serde = { version = "1", features = ["derive"] }
shared = { version = "0.1.0", path = "../shared" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-web = "0.1"
url = { workspace = true }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3", features = ["Clipboard"] }
