[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "itlkd-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
askama = "0.15.1"
askama_web = { version = "0.15.0", features = ["axum-0.8"] }
axum = { version = "0.8.4", features = ["macros"] }
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.46.1", features = ["macros", "net", "rt", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
